womp womp paulaner spezi

--- a/config/TKDiscRipper.conf
+++ b/config/TKDiscRipper.conf
@@ -1,3 +1,48 @@
+[General]
+outputdirectory = ~/TKDiscRipper/output
+tempdirectory = ~/TKDiscRipper/temp
+makemkvlicensekey = 
+omdbapikey = 
+
 [auth]
 username=admin
 password=admin
+
+[CD]
+outputdirectory = ${General:OutputDirectory}/CD
+outputformat = flac
+configpath = ~/TKDiscRipper/config/abcde.conf
+additionaloptions = 
+
+[DVD]
+outputdirectory = ~/TKDiscRipper/output/DVD
+usehandbrake = true
+handbrakepreset = /home/arm/TKDiscRipper/config/HandBrake1080pAV1nVENC.json  # Preset or path to preset file for DVDs
+handbrakeformat = mkv
+
+[BLURAY]
+outputdirectory = ${General:OutputDirectory}/BLURAY
+usehandbrake = true
+handbrakepreset = Fast 1080p30  # Preset or path to preset file for Blu-rays
+handbrakeformat = mkv
+
+[OTHERDISK]
+outputdirectory = ${General:OutputDirectory}/ISO
+
+[Drives]
+blacklist = /dev/sr420
+
+[Logging]
+logdirectory = /var/log/TKDiscRipper
+loglevel = INFO
+
+[QUESTIONABLE]
+movieripmode = main_feature_only
+movieminlength = 1800
+movieoutputdirsuffix = /Movies
+showripmode = all
+showminlenghth = 420
+showmaxlenghth = ${MovieMinLength}
+showoutputdirsuffix = /Shows
+unknownripmode = all
+unknownoutputdirsuffix = /Unknown
