--- a/config/TKDiscRipper.conf
+++ b/config/TKDiscRipper.conf
@@ -9,21 +9,22 @@ username=admin
 password=admin
 
 [CD]
-outputdirectory = ${General:OutputDirectory}/CD
+outputdirectory = # managed through abcde.conf => OUTPUTDIR
+tempdirectory = # managed through abcde.conf => WAVOUTPUTDIR
 outputformat = flac
 configpath = ~/TKDiscRipper/config/abcde.conf
-additionaloptions = 
+additionaloptions = -x
 
 [DVD]
 outputdirectory = ~/TKDiscRipper/output/DVD
-usehandbrake = true
-handbrakepreset = /home/arm/TKDiscRipper/config/HandBrake1080pAV1nVENC.json  # Preset or path to preset file for DVDs
+usehandbrake = true # Enable transcoding
+handbrakepreset = /home/arm/TKDiscRipper/config/HandBrake1080pAV1nVENC.json  # Preset file for DVDs
 handbrakeformat = mkv
 
 [BLURAY]
-outputdirectory = ${General:OutputDirectory}/BLURAY
-usehandbrake = true
-handbrakepreset = Fast 1080p30  # Preset or path to preset file for Blu-rays
+outputdirectory = ~/TKDiscRipper/output/BLURAY
+usehandbrake = true # Enable transcoding
+handbrakepreset = /home/arm/TKDiscRipper/config/HandBrake1080pAV1nVENC.json  # Preset file for Blu-rays
 handbrakeformat = mkv
 
 [OTHERDISK]
