--- a/config/abcde.conf
+++ b/config/abcde.conf
@@ -2,10 +2,10 @@
 
 OUTPUTDIR=${HOME}/TKDiscRipper/output/CD
 WAVOUTPUTDIR=${HOME}/TKDiscRipper/temp
-OUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM}. ${TRACKFILE}'
-VAOUTPUTFORMAT='Various-${ALBUMFILE}/${TRACKNUM}.${ARTISTFILE}-${TRACKFILE}'
-ONETRACKOUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}/${ALBUMFILE}'
-VAONETRACKOUTPUTFORMAT='${OUTPUT}/Various-${ALBUMFILE}/${ALBUMFILE}'
+OUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM}_${TRACKFILE}'
+VAOUTPUTFORMAT='${ALBUMFILE}/${TRACKNUM}_${ARTISTFILE}-${TRACKFILE}'
+ONETRACKOUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}'
+VAONETRACKOUTPUTFORMAT='${OUTPUT}/${ALBUMFILE}'
 mungefilename ()
 {
     echo "$@" | sed s,:,-,g | tr / _ | tr -d \'\"\?\[:cntrl:\]
