--- a/config/TKDiscRipper.conf
+++ b/config/TKDiscRipper.conf
@@ -5,8 +5,8 @@ makemkvlicensekey =
 omdbapikey = 
 
 [auth]
-username=admin
-password=admin
+username = admin
+password = admin
 
 [CD]
 outputdirectory = # managed through abcde.conf => OUTPUTDIR
@@ -17,18 +17,19 @@ additionaloptions = -x
 
 [DVD]
 outputdirectory = ~/TKDiscRipper/output/DVD
-usehandbrake = true # Enable transcoding
+usehandbrake = True # Enable transcoding
 handbrakepreset = /home/arm/TKDiscRipper/config/HandBrake1080pAV1nVENC.json  # Preset file for DVDs
 handbrakeformat = mkv
 
 [BLURAY]
 outputdirectory = ~/TKDiscRipper/output/BLURAY
-usehandbrake = true # Enable transcoding
+usehandbrake = True # Enable transcoding
 handbrakepreset = /home/arm/TKDiscRipper/config/HandBrake1080pAV1nVENC.json  # Preset file for Blu-rays
 handbrakeformat = mkv
 
-[OTHERDISK]
-outputdirectory = ${General:OutputDirectory}/ISO
+[OTHER]
+outputdirectory = ~/TKDiscRipper/output/ISO
+compression = bz2
 
 [Drives]
 blacklist = /dev/sr420
@@ -47,3 +48,4 @@ showmaxlenghth = ${MovieMinLength}
 showoutputdirsuffix = /Shows
 unknownripmode = all
 unknownoutputdirsuffix = /Unknown
+
