--- a/config/TKDiscRipper.conf
+++ b/config/TKDiscRipper.conf
@@ -17,14 +17,14 @@ additionaloptions = -x
 
 [DVD]
 outputdirectory = ~/TKDiscRipper/output/DVD
-usehandbrake = True # Enable transcoding
-handbrakepreset = /home/arm/TKDiscRipper/config/1080pSVTAV1.json  # Preset file for DVDs
+usehandbrake = True
+handbrakepreset = ~/TKDiscRipper/config/1080pSVTAV1.json
 handbrakeformat = mkv
 
 [BLURAY]
 outputdirectory = ~/TKDiscRipper/output/BLURAY
-usehandbrake = True # Enable transcoding
-handbrakepreset = /home/arm/TKDiscRipper/config/1080pSVTAV1.json  # Preset file for Blu-rays
+usehandbrake = True
+handbrakepreset = ~/TKDiscRipper/config/1080pSVTAV1.json
 handbrakeformat = mkv
 
 [OTHER]
