settings bool toggle added

--- a/config/TKDiscRipper.conf
+++ b/config/TKDiscRipper.conf
@@ -23,7 +23,7 @@ handbrakeformat = mkv
 
 [BLURAY]
 outputdirectory = ~/TKDiscRipper/output/BLURAY
-usehandbrake = True
+usehandbrake = false
 handbrakepreset = ~/TKDiscRipper/config/1080pSVTAV1.json
 handbrakeformat = mkv
 
