--- a/config/abcde.conf
+++ b/config/abcde.conf
@@ -2,9 +2,9 @@
 
 OUTPUTDIR=${HOME}/TKDiscRipper/output/CD
 WAVOUTPUTDIR=${HOME}/TKDiscRipper/temp
-OUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM}_${TRACKFILE}'
-VAOUTPUTFORMAT='${ALBUMFILE}/${TRACKNUM}_${ARTISTFILE}-${TRACKFILE}'
-ONETRACKOUTPUTFORMAT='${OUTPUT}/${ARTISTFILE}-${ALBUMFILE}'
+OUTPUTFORMAT='${ARTISTFILE}/${ALBUMFILE}/${TRACKNUM}. ${TRACKFILE}'
+VAOUTPUTFORMAT='${ALBUMFILE}/${TRACKNUM}. ${ARTISTFILE} - ${TRACKFILE}'
+ONETRACKOUTPUTFORMAT='${OUTPUT}/${ARTISTFILE} - ${ALBUMFILE}'
 VAONETRACKOUTPUTFORMAT='${OUTPUT}/${ALBUMFILE}'
 mungefilename ()
 {
