--- a/config/TKDiscRipper.conf
+++ b/config/TKDiscRipper.conf
@@ -18,13 +18,15 @@ additionaloptions = -x
 [DVD]
 outputdirectory = ~/TKDiscRipper/output/DVD
 usehandbrake = True
-handbrakepreset = ~/TKDiscRipper/config/1080pSVTAV1.json
+handbrakepreset_name = Very Fast 720p30
+handbrakepreset_path = 
 handbrakeformat = mkv
 
 [BLURAY]
 outputdirectory = ~/TKDiscRipper/output/BLURAY
 usehandbrake = false
-handbrakepreset = ~/TKDiscRipper/config/1080pSVTAV1.json
+handbrakepreset_name = H265NVENC
+handbrakepreset_path = ~/TKDiscRipper/config/H265NVENC.json
 handbrakeformat = mkv
 
 [OTHER]
