--- a/config/TKDiscRipper.conf
+++ b/config/TKDiscRipper.conf
@@ -1,144 +1,53 @@
-General:
-  outputdirectory:
-    value: ~/TKDiscRipper/output
-    description: "Default output directory for all rips"
-    type: path
+[General]
+outputdirectory = ~/TKDiscRipper/output
+tempdirectory = ~/TKDiscRipper/temp
+makemkvlicensekey = 
+omdbapikey = 
 
-  tempdirectory:
-    value: ~/TKDiscRipper/temp
-    description: "Temporary working directory for jobs"
-    type: path
+[auth]
+username = admin
+password = admin
 
-  makemkvlicensekey:
-    value: null
-    description: "License key for MakeMKV"
-    type: string
+[CD]
+outputdirectory = # managed through abcde.conf => OUTPUTDIR
+tempdirectory = # managed through abcde.conf => WAVOUTPUTDIR
+outputformat = flac
+configpath = ~/TKDiscRipper/config/abcde.conf
+additionaloptions = -x
 
-  omdbapikey:
-    value: null
-    description: "API key for OMDb metadata lookup"
-    type: string
+[DVD]
+outputdirectory = ~/TKDiscRipper/output/DVD
+usehandbrake = True
+handbrakepreset_name = Very Fast 720p30
+handbrakepreset_path = 
+handbrakeformat = mkv
 
-auth:
-  username:
-    value: admin
-    description: "Login username"
-    type: string
+[BLURAY]
+outputdirectory = ~/TKDiscRipper/output/BLURAY
+usehandbrake = false
+handbrakepreset_name = H265NVENC
+handbrakepreset_path = ~/TKDiscRipper/config/H265NVENC.json
+handbrakeformat = mkv
 
-  password:
-    value: admin
-    description: "Login password"
-    type: string
+[OTHER]
+outputdirectory = ~/TKDiscRipper/output/ISO
+compression = bz2
 
-CD:
-  outputdirectory:
-    value: null
-    description: "Managed through abcde.conf OUTPUTDIR"
-    type: path
+[Drives]
+blacklist = /dev/sr10
 
-  tempdirectory:
-    value: null
-    description: "Managed through abcde.conf WAVOUTPUTDIR"
-    type: path
+[Logging]
+logdirectory = /var/log/TKDiscRipper
+loglevel = INFO
 
-  outputformat:
-    value: flac
-    description: "Audio output format"
-    type: string
+[QUESTIONABLE]
+movieripmode = main_feature_only
+movieminlength = 1800
+movieoutputdirsuffix = /Movies
+showripmode = all
+showminlenghth = 420
+showmaxlenghth = ${MovieMinLength}
+showoutputdirsuffix = /Shows
+unknownripmode = all
+unknownoutputdirsuffix = /Unknown
 
-  configpath:
-    value: ~/TKDiscRipper/config/abcde.conf
-    description: "Path to abcde config"
-    type: path
-
-  additionaloptions:
-    value: -x
-    description: "Extra flags to pass to abcde"
-    type: string
-
-DVD:
-  outputdirectory:
-    value: ~/TKDiscRipper/output/DVD
-    description: "DVD output directory"
-    type: path
-
-  usehandbrake:
-    value: true
-    description: "Enable HandBrake for DVD encoding"
-    type: boolean
-
-  handbrakepreset_name:
-    value: Very Fast 720p30
-    description: "HandBrake preset"
-    type: string
-
-  handbrakepreset_path:
-    value: null
-    description: "Path to HandBrake preset JSON"
-    type: path
-
-  handbrakeformat:
-    value: mkv
-    description: "Container format"
-    type: string
-
-BLURAY:
-  outputdirectory:
-    value: ~/TKDiscRipper/output/BLURAY
-    description: "Blu-ray output directory"
-    type: path
-
-  usehandbrake:
-    value: false
-    description: "Enable HandBrake for Blu-ray encoding"
-    type: boolean
-
-  handbrakepreset_name:
-    value: H265NVENC
-    description: "HandBrake preset name"
-    type: string
-
-  handbrakepreset_path:
-    value: ~/TKDiscRipper/config/H265NVENC.json
-    description: "Path to HandBrake preset JSON"
-    type: path
-
-  handbrakeformat:
-    value: mkv
-    description: "Container format"
-    type: string
-
-OTHER:
-  outputdirectory:
-    value: ~/TKDiscRipper/output/ISO
-    description: "Where to store ripped ISO or raw data"
-    type: path
-
-  compression:
-    value: bz2
-    description: "Compression format (bz2 or zstd)"
-    type: string
-
-Drives:
-  blacklist:
-    value:
-      - /dev/sr0
-    description: "List of drive device paths to ignore"
-    type: list
-
-Logging:
-  logdirectory:
-    value: /var/log/TKDiscRipper
-    description: "Directory for log files"
-    type: path
-
-  loglevel:
-    value: INFO
-    description: "Log verbosity (DEBUG, INFO, WARN, ERROR)"
-    type: string
-
-Advanced:
-  HandbrakeFlatpak:
-    value: true
-    description: "Set to false when using a native installation of HandBrake on Linux (not recommended by HandBrake: https://handbrake.fr/docs/en/latest/get-handbrake/where-to-get-handbrake.html)"
-    type: boolean
